Fixed dark mode sidebar and made header dark mode (not done)

--- a/styles/general.css
+++ b/styles/general.css
@@ -9,7 +9,7 @@ body {
   padding-top: 80px;
   padding-left: 96px;
   padding-right: 24px;
-  background-color: rgb(248, 248, 248);
+  background-color: rgb(239, 239, 239);
   height: 1300px;
 }
 
