--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -3,7 +3,7 @@
   left: 0;
   bottom: 0;
   top: 55px;
-  background-color: white;
+  background-color: rgb(231,231,231);
   width: 72px;
   z-index: 200;
   padding-top: 5px;
@@ -17,12 +17,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  transition: background-color 0.15s;
+  transition: opacity 0.15s;
   cursor: pointer;
 }
 
 .sidebar-link:hover {
-  background-color: rgb(220, 220, 220);
+  opacity: 0.5;
 }
 
 .sidebar-link img {
